# django_polls

./: pyproject.toml
django_polls/: __init__.py  admin.py  models.py  views.py
django_polls/migrations/: 0001_initial.py
django_polls/static/polls/: style.css
django_polls/templates/polls/: detail.html  index.html  results.html
django_polls/tests/: test_models.py  test_views.py
